<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android" xmlns:app="http://schemas.android.com/apk/res-auto">

    <item
            android:id="@+id/saveedit_beer"
            android:icon="@drawable/ic_check_black_24dp"
            app:showAsAction="ifRoom"
            android:title="@string/save_edited_created_beer"/>

</menu>
