<?xml version="1.0" encoding="utf-8"?>
<FrameLayout
        xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:tools="http://schemas.android.com/tools"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context=".ui.fragments.BeerDetailsFragment"
        android:background="#ededed" tools:ignore="Overdraw">

    <android.support.v7.widget.RecyclerView
            android:id="@+id/recyclerView"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            tools:listitem="@layout/row_beerdetails_subtitle"/>

    <android.support.design.widget.FloatingActionButton
            android:id="@+id/fab"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginBottom="20dp"
            android:layout_marginEnd="16dp"
            android:layout_gravity="end|bottom"
            android:src="@drawable/ic_edit_black_24dp"
            android:tint="#FFF"
            android:clickable="true"
            android:backgroundTint="@color/colorAccent"
            android:elevation="10dp"
            android:focusable="true" tools:targetApi="lollipop"/>

</FrameLayout>