...
    <string name="header_placeholder">Header</string>
    <string name="beer_year">Beer year</string>
    <string name="cancel_yearpicker_contentdescription">Cancel button for year selection</string>
    <string name="apply_yearpicker_contentdescription">Apply button for year selection</string>
    <string name="no_styles_found_for_category">No styles could be found for this category</string>
    <string name="fill_in_name">Fill in at least a name for your beer</string>
    <string name="missing_information">Missing information</string>
    <string name="delete_beer_confirmation">Are you sure you want to remove this beer from your local library? Doing
        this will also remove all your notes for this beer.
    </string>
    <string name="delete_beer_dialogtitle">Delete beer</string>
    <string name="add_note">Add note</string>
    <string name="add">Add</string>
...
