<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android" xmlns:app="http://schemas.android.com/apk/res-auto">

    <item
            android:id="@+id/edit_beer"
            android:icon="@drawable/ic_edit_black_24dp"
            app:showAsAction="ifRoom"
            android:title="@string/edit_beer"/>
    <item
            android:id="@+id/delete_beer"
            android:icon="@drawable/ic_delete_black_24dp"
            app:showAsAction="ifRoom"
            android:title="@string/delete_from_local_library"/>

</menu>
