<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android" xmlns:app="http://schemas.android.com/apk/res-auto">

    <item
            android:id="@+id/save_beer"
            android:icon="@drawable/ic_save_black_24dp"
            app:showAsAction="always"
            android:title="@string/save_beer_locally"/>

</menu>
